--- a/index.html
+++ b/index.html
@@ -45,6 +45,27 @@
                     </div>
                 </div>
 
+                <!-- Daily Practice Tracker -->
+                <div class="daily-practice-widget">
+                    <h3>🎯 Today's Practice Goal</h3>
+                    <div class="daily-practice-timer">
+                        <span id="daily-practice-timer">0:00 / 90min</span>
+                        <span id="daily-practice-percent" class="practice-percent">0%</span>
+                    </div>
+                    <div class="daily-practice-bar">
+                        <div id="daily-practice-progress" class="daily-practice-progress"></div>
+                    </div>
+                    <div class="practice-streak">
+                        <span class="streak-fire">🔥</span>
+                        <span id="practice-streak-count">0 day streak</span>
+                    </div>
+                </div>
+
+                <!-- Practice Calendar -->
+                <div class="practice-calendar-widget">
+                    <div id="practice-calendar"></div>
+                </div>
+
                 <div class="mode-selector">
                     <h3>Choose Your Mode</h3>
                     
